2002-12-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tclblend/tcl/lang/Interp.java (callCommand):
	If a RuntimeException is encountered during
	execution of a Tcl command implemented in Java,
	set the interp result to the stack trace and
	continue to propagate the exception.
	* src/tcljava/tcl/lang/JavaInvoke.java (call,
	getsetField, getProperty, setProperty):
	Don't blindly catch all exceptions, instead
	catch InvocationTargetException and wrap it
	in a ReflectException when executing a method
	via the reflection interface.

2002-12-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/ReflectException.java
	(ReflectException): Set the interp result to
	the exception message instead of the result
	of a toString() call when wrapping a TclException.
	* tests/inprogress/CallFrame.test:
	* tests/inprogress/EventAdaptor.test:
	* tests/tclblend/javaInterp.test:
	* tests/tclblend/javaUtil.test:
	* tests/tcljava/FuncSig.test:
	* tests/tcljava/JavaInvoke.test:
	* tests/tcljava/JavaNewCmd.test:
	* tests/tcljava/PkgInvoker.test: Update error
	messages so that they do not include
	"tcl.lang.TclException: " before the
	actual error message.

2002-12-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/java.h:
	* src/native/javaCmd.c (FreeJavaCache, JavaSetupJava,
	AddToClassCache, AddToMethodCache, AddToFieldCache):
	Remove unused Void and voidTYPE classes from the cache.
	Don't set a thread local exit handler unless the
	cache was initialized properly. Don't call the ToString()
	method since the cache was not yet initialized.

2002-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/JavaInvoke.java (getsetField):
	Check to see is a field is final before setting it.
	Add previous exception error message when creating
	an unexpected exception.
	* tests/tcljava/JavaFieldCmd.test: Test for error
	on attempt to set a final field.

2002-12-27  Mo DeJong  <mdejong@users.sourceforge.net>
