@@ -1,3 +1,11 @@
+2002-12-29  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/tcljava/tcl/lang/ArrayObject.java (initArray):
+	Generate TclException instead of ReflectException.
+	* src/tcljava/tcl/lang/JavaDefineClassCmd.java (cmdProc):
+	Remove pointless wrapping of Exception in ReflectException.
+	* tests/tcljava/ArrayObject.test: Update error message.
+
 2002-12-28  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* src/tclblend/tcl/lang/Interp.java (callCommand):
